<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Wybor_dzwieku">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="311dp"
        android:layout_height="430dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sound1"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="210dp"
            tools:text="Sound1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sound2"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="274dp"
            tools:text="Sound2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sound3"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="146dp"
            tools:text="Sound3" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sound4"
            tools:layout_editor_absoluteX="98dp"
            tools:layout_editor_absoluteY="242dp"
            tools:text="Sound4" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sound5"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="178dp"
            tools:text="Sound5" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/sound6"
            tools:text="Sound6" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/sound7"
            tools:text="Sound7" />

    </RadioGroup>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="64dp"
        android:text="@string/cofnij2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="@+id/button6"
        app:layout_constraintVertical_bias="1.0"
        tools:text="CANCEL" />

    <Button
        android:id="@+id/button6"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="64dp"
        android:text="@string/ok2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        tools:text="OK" />

</android.support.constraint.ConstraintLayout>